[project]
name = "relaytest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pynchia", email = "pynchia@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "sqlmodel>=0.0.14",
    "httpx>=0.26.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
]
